# ai_deployment_tutorial

./: .gitignore  README.md  pyproject.toml
data/seed/: accounts_qual.jsonl  accounts_quant.csv
docs/tutorial/: account_strategy_synthesizer_tutorial.md  phase_0_setup.md  phase_1_data.md  phase_2_retrieval.md  phase_3_predictive.md  phase_4_orchestration.md  phase_5_evals.md  phase_6_observability.md  phase_7_deploy.md  tutorial_generation_brief.md
scripts/: check_scoring.py  check_traceability.py  create_index.py  embed_chunks.py  hello.py  run_batch.py  run_hitl.py  run_one.py  seed_data.py  tool_smoke.py  upload_chunks.py
src/acnt_strat_synth/: config.py
src/acnt_strat_synth/data/: ensemble.py  loader.py  schemas.py
src/acnt_strat_synth/graph/: build.py  nodes.py  state.py
src/acnt_strat_synth/predict/: score.py  tool.py
src/acnt_strat_synth/retrieval/: chunk.py  search.py
