[project]
name = "acnt-strat-synth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-keyvault-secrets>=4.11.0",
    "azure-search-documents>=12.0.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "openai>=2.40.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
